samples/_failures_safe/1761206182_ea6bce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38e6b420.c: In function ‘matrix_mul’:
./samples/SAFE/__tmp_38e6b420.c:148:13: error: expected declaration or statement at end of input
  148 |             }
      |             ^
./samples/SAFE/__tmp_38e6b420.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38e6b420.c:148:13: error: expected declaration or statement at end of input
